--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-index.html
 <!DOCTYPE html>
 <html>
 <head>
-<title>For Rakshita ❤️</title>
+<title>For Rakshita 🎀</title>
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
 
 body{
-    margin:0;
-    height:100vh;
-    font-family:'Poppins',sans-serif;
-    color:white;
-    text-align:center;
-    overflow:hidden;
-    background:linear-gradient(-45deg,#ff4d88,#ff8fb1,#ffb3c6,#ffd6e0);
-    background-size:400% 400%;
-    animation:bg 10s ease infinite;
+margin:0;
+height:100vh;
+font-family:'Quicksand',sans-serif;
+text-align:center;
+color:#7a003c;
+overflow:hidden;
+
+background:linear-gradient(45deg,#ffd6e8,#ffc0d9,#ff9ec7,#ff7ab5);
+background-size:400% 400%;
+animation:bg 12s ease infinite;
 }
 
 @keyframes bg{
@@ -26,27 +26,14 @@ body{
 }
 
 .container{
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    animation:fade 1s ease;
+position:absolute;
+top:50%;
+left:50%;
+transform:translate(-50%,-50%);
+animation:fade 0.8s ease;
 }
 
 @keyframes fade{
 from{opacity:0; transform:translate(-50%,-60%)}
-to{opacity:1; transform:translate(-50%,-50%)}
-}
 
-button{
-padding:14px 28px;
-font-size:18px;
-border:none;
-border-radius:30px;
-margin:10px;
-cursor:pointer;
-transition:0.3s;
-}
-
-#yes{background:white;colo
-
+    
