--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-    
 <head>
 <title>For Rakshita 🎀</title>
-    
+
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@500;700&display=swap');
 
 body{
 margin:0;
 height:100vh;
-font-family:'Quicksand',sans-serif;
+font-family:'Baloo 2',cursive;
 text-align:center;
-color:#7a003c;
 overflow:hidden;
+color:#7a003c;
 
 background:linear-gradient(45deg,#ffd6e8,#ffc0d9,#ff9ec7,#ff7ab5);
 background-size:400% 400%;
@@ -31,9 +30,122 @@ position:absolute;
 top:50%;
 left:50%;
 transform:translate(-50%,-50%);
-animation:fade 0.8s ease;
+background:rgba(255,255,255,0.75);
+padding:40px;
+border-radius:25px;
+box-shadow:0 10px 40px rgba(0,0,0,0.2);
+animation:fade .7s ease;
 }
 
 @keyframes fade{
 from{opacity:0; transform:translate(-50%,-60%)}
+to{opacity:1; transform:translate(-50%,-50%)}
+}
 
+button{
+padding:14px 28px;
+font-size:18px;
+border:none;
+border-radius:40px;
+margin:12px;
+cursor:pointer;
+font-weight:bold;
+transition:.25s;
+}
+
+#yes{background:#ff4d88;color:white;}
+#yes:hover{transform:scale(1.15)}
+
+#no{background:white;color:#ff4d88;position:absolute}
+
+.hidden{display:none}
+
+.float{
+position:fixed;
+font-size:22px;
+animation:float 8s linear infinite;
+}
+
+@keyframes float{
+to{transform:translateY(-120vh) rotate(360deg)}
+}
+</style>
+</head>
+
+<body>
+
+<div id="start" class="container">
+<h1>hi drama bean 🎀</h1>
+<h2>click this i need to say something</h2>
+<button onclick="openMessage()">open</button>
+</div>
+
+<div id="message" class="container hidden">
+<h1>
+i love you drama bean <br>
+we'll figure this out dw <br>
+you annoy me daily but i still choose you
+</h1>
+
+<h2>be my valentine? 💗</h2>
+
+<button id="yes" onclick="yesClicked()">yes</button>
+<button id="no" onmouseover="moveNo()">no</button>
+
+<p id="annoy"></p>
+</div>
+
+<div id="final" class="container hidden">
+<h1>good. correct decision.</h1>
+<h2>you are now stuck with me 😌</h2>
+
+<video width="320" controls autoplay>
+<source src="video.mp4" type="video/mp4">
+</video>
+</div>
+
+<script>
+function openMessage(){
+document.getElementById("start").classList.add("hidden");
+document.getElementById("message").classList.remove("hidden");
+spawn();
+}
+
+let lines=[
+"tf how dare you",
+"click yes",
+"be serious",
+"wrong answer",
+"go back and fix it",
+"rakshita behave"
+];
+
+function moveNo(){
+let btn=document.getElementById("no");
+btn.style.top=Math.random()*80+"%";
+btn.style.left=Math.random()*80+"%";
+document.getElementById("annoy").innerText=
+lines[Math.floor(Math.random()*lines.length)];
+}
+
+function yesClicked(){
+document.getElementById("message").classList.add("hidden");
+document.getElementById("final").classList.remove("hidden");
+spawn();
+}
+
+function spawn(){
+setInterval(()=>{
+let e=document.createElement("div");
+e.className="float";
+let icons=["🎀","💗","🌸","✨","🫶","💞"];
+e.innerHTML=icons[Math.floor(Math.random()*icons.length)];
+e.style.left=Math.random()*100+"vw";
+document.body.appendChild(e);
+setTimeout(()=>e.remove(),8000);
+},400);
+}
+</script>
+
+</body>
+</html>
