--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ you've successfully subscribed to:<br><br>
 • reels at 3am
 </h2>
 
-<h3>valid till forever (or at least till mba)</h3>
+<h3>valid till forever (not joking.)</h3>
 
 <button onclick="showFinal()">continue</button>
 </div>
